--- a/rusty-blog-model/Cargo.toml
+++ b/rusty-blog-model/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+actix-web = "4.5.1"
 diesel = { version = "2.1.5", features = ["postgres"] }
 dotenvy = "0.15.7"
