--- a/rusty-blog-model/Cargo.toml
+++ b/rusty-blog-model/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4.5.1"
-diesel = { version = "2.1.5", features = ["postgres"] }
+diesel = { version = "2.1.5", features = ["postgres", "r2d2"] }
 dotenvy = "0.15.7"
