--- a/rusty-blog-model/Cargo.toml
+++ b/rusty-blog-model/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2021"
 actix-web = "4.5.1"
 diesel = { version = "2.1.5", features = ["postgres", "r2d2"] }
 dotenvy = "0.15.7"
+env_logger = "0.11.3"
+log = "0.4.21"
