--- a/rusty-blog-model/Cargo.toml
+++ b/rusty-blog-model/Cargo.toml
@@ -10,4 +10,7 @@ actix-web = "4.5.1"
 diesel = { version = "2.1.5", features = ["postgres", "r2d2"] }
 dotenvy = "0.15.7"
 env_logger = "0.11.3"
+json = "0.12.4"
 log = "0.4.21"
+serde = { version = "1.0.198", features = ["derive"] }
+serde_json = "1.0.116"
