--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,17 @@
-[workspace]
-resolver = "1"
+[package]
+name = "rusty-blog"
+version = "0.1.0"
+edition = "2021"
 
-members = ["rusty-blog-model"]
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[dependencies]
+actix-web = "4.5.1"
+diesel = { version = "2.1.5", features = ["postgres", "r2d2"] }
+dotenvy = "0.15.7"
+env_logger = "0.11.3"
+json = "0.12.4"
+log = "0.4.21"
+serde = { version = "1.0.198", features = ["derive"] }
+serde_json = "1.0.116"
+tera = "1.19.1"
